[gd_scene load_steps=9 format=3 uid="uid://hnsq0f7ct8fa"]

[ext_resource type="Script" uid="uid://dnv3k6r6sa1wf" path="res://scripts/character_body_2d.gd" id="1_33t3a"]
[ext_resource type="Shader" uid="uid://dha41nql3qnc3" path="res://shaders/PaletteSwap.gdshader" id="2_1vhd4"]
[ext_resource type="Texture2D" uid="uid://b5mpgx51ob4xh" path="res://images/palettes/palette.png" id="3_e3k2b"]
[ext_resource type="Texture2D" uid="uid://cp4frsr2e884e" path="res://images/star.png" id="4_a5u45"]
[ext_resource type="AudioStream" uid="uid://bnkw84wgpgwer" path="res://audio/sfx-appear.ogg" id="5_cnr7i"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_33t3a"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x1nk7"]
size = Vector2(14, 14)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wnywi"]
shader = ExtResource("2_1vhd4")
shader_parameter/palette = ExtResource("3_e3k2b")
shader_parameter/accessRow = 5

[node name="CharacterBody2D" type="CharacterBody2D"]
collision_layer = 8
script = ExtResource("1_33t3a")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4294967295
collision_mask = 4294967295

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_33t3a")
debug_color = Color(0.870756, 0.000491704, 0.848099, 0.42)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_x1nk7")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
material = SubResource("ShaderMaterial_wnywi")
texture = ExtResource("4_a5u45")

[node name="AppearSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_cnr7i")
max_distance = 4096.0
attenuation = 1e-05
panning_strength = 0.0

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
